Backend of todo app completed. Yet to write the tests

--- a/backend_todo/taskTrack_todo/.env
+++ b/backend_todo/taskTrack_todo/.env
@@ -6,6 +6,6 @@ DEBUG = True
 # 1. error jo ata ha wo verbose hota han 
 # 2. documentation create karta ha
 
-DATABASE_URL = postgresql://neondb_owner:xVq83bkWmeJG@ep-frosty-glitter-a1lrn81c.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
+DATABASE_URL = "postgresql://neondb_owner:xVq83bkWmeJG@ep-frosty-glitter-a1lrn81c-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
 
 
