Updated and working

--- a/backend_todo/taskTrack_todo/.env
+++ b/backend_todo/taskTrack_todo/.env
@@ -7,5 +7,6 @@ DEBUG = True
 # 2. documentation create karta ha
 
 DATABASE_URL = "postgresql://neondb_owner:xVq83bkWmeJG@ep-frosty-glitter-a1lrn81c-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
+# DATABASE_URL=postgresql://user:password@localhost/dbname
 
 
